fix flex-wrap problem.

--- a/task11/css/index.css
+++ b/task11/css/index.css
@@ -241,6 +241,7 @@ ul {
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
+    -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
 
     -webkit-box-pack: justify;
